--- a/anExternal.css
+++ b/anExternal.css
@@ -9,7 +9,27 @@
     font-family: "Roboto";
 }
 
+#Apprentice {
+    text-align: center;
+    position:relative;
+}
+
+#Apprentice img {
+    border: dotted;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 img {
     width: 50px;
     height: 50px;
+}
+
+.text-over-image {
+    position: absolute;
+    top: 0;
+    left:0;
+    right:0;
+    bottom:0;
+    border: dotted;
 }
