--- a/anExternal.css
+++ b/anExternal.css
@@ -2,11 +2,15 @@
     color:darkslategrey;
     font-family: 'Segoe UI';
     font-weight: bold;
+    border: dotted;
+    border-radius: 30px;
 }
 
 #P2 {
     color: orangered;
     font-family: "Roboto";
+    border: dotted;
+    border-radius: 30px;
 }
 
 #Apprentice {
@@ -15,14 +19,9 @@
 }
 
 #Apprentice img {
-    border: dotted;
     margin-left: 20px;
     margin-right: 20px;
-}
-
-img {
-    width: 50px;
-    height: 50px;
+    float: left;
 }
 
 .text-over-image {
@@ -32,4 +31,9 @@ img {
     right:0;
     bottom:0;
     border: dotted;
+}
+
+.small-img {
+    width: 50px;
+    height: 50px;
 }
