--- a/anExternal.css
+++ b/anExternal.css
@@ -14,26 +14,25 @@
 }
 
 #Apprentice {
-    text-align: center;
     position:relative;
+    height: 200px;
+    width: 240px;
+    border:dotted;
 }
 
 #Apprentice img {
+    width: 200px;
+    height: 200px;
     margin-left: 20px;
     margin-right: 20px;
-    float: left;
 }
 
 .text-over-image {
     position: absolute;
-    top: 0;
-    left:0;
-    right:0;
-    bottom:0;
-    border: dotted;
 }
 
 .small-img {
     width: 50px;
     height: 50px;
+    float: right;
 }
