--- a/anExternal.css
+++ b/anExternal.css
@@ -29,11 +29,11 @@
     height: 200px;
     margin-left: 20px;
     margin-right: 20px;
-    float: left;
 }
 
 .text-over-image {
     line-height: 200px;
+    display: inline;
 }
 
 .small-img {
