--- a/anExternal.css
+++ b/anExternal.css
@@ -29,11 +29,13 @@
     height: 200px;
     margin-left: 20px;
     margin-right: 20px;
+    z-index: -1;
 }
 
 .text-over-image {
     line-height: 200px;
     display: inline;
+    color: white;
 }
 
 .small-img {
